# Pose-estimation-and-AR

./: .gitignore  CMakeLists.txt  Calibration.cpp  Calibration.sln  HarrisCorner.cpp  HarrisCorner.h  PointsCloud.cpp  PointsCloud.h  PoseDetectAruco.cpp  PoseDetectAruco.h  PoseEstimation.cpp  PoseEstimation.h  SomeCameraFuction.cpp  Visualizexd.cpp  backup.md  data.txt  detectMarkers.cpp  detectMarkers.h  main.cpp  readme.md  stl_visualize.cpp  stl_visualize.h  visualizexd.h
doc/: Log.md
header/: CalibrationChessboard.h  HarrisCorner.h  PoseDetectAruco.h  PoseEstimation.h  ReadModel.h  ReadSTL.h  SomeCameraFuction.h  detectMarkers.h  headfiles.h  main.h  trackVisualization.h  visualizexd.h
img/: 1.stl  aruco_chessboard.docx  cat.stl  mydata.txt  sift.txt
models/: huosai.STL
src/: CalibrationChessboard.cpp  PointsCloud.cpp  PoseDetectAruco.cpp  PoseDetectAruco_old.cpp  PoseEstimation.cpp  ReadModel.cpp  ReadSTL.cpp  SomeCameraFuction.cpp  Visualizexd.cpp  detectMarkers.cpp  main.cpp  trackVisualization.cpp
